# xPLLib

./: .travis.yml  CMakeLists.txt  README.md  xPLLib - Example1.cbp  xPLLib - Example2.cbp  xPLLib - Example3.cbp  xPLLib.cbp  xPLLib.workspace
dependency/SimpleIni/: SimpleIni.cpp
dependency/SimpleSock/: SimpleSockUDP.cpp  SimpleSockUDP_Mock.h
examples/: example1.cpp  example2.cpp  example3.cpp  exampleExt.cpp  exampleExt.h
src/xPLLib/: xPLDevCfg.cpp  xPLDevCfg.h  xPLDevice.cpp  xPLDevice.h
src/xPLLib/Extensions/: AdvanceConfig.cpp  BasicConfig.cpp  Sensors.cpp  Sensors.h
src/xPLLib/Schemas/: SchemaObject.cpp
test/: CMakeLists.txt  TestxPLAddress.cpp  TestxPLAddress.h  TestxPLDevCfg.cpp  TestxPLDevCfg.h  TestxPLDevice.cpp  TestxPLDevice.h  TestxPLExtAdvConfig.cpp  TestxPLExtAdvConfig.h  TestxPLExtSensors.cpp  TestxPLExtSensors.h  TestxPLMsg.cpp  TestxPLMsg.h  main.cpp
